  (this option is now used for the compiler's parser)
  (Jeremy Yallop)

- GPR#548: empty documentation comments
  (Florian Angeletti)

- GPR#613: make ocamldoc use -open arguments
  (Florian Angeletti)

- GPR#718: ocamldoc, fix order of extensible variant constructors
  (Florian Angeletti)

- MPR#7290: ocamldoc, improved support for inline records
  (Florian Angeletti)

- Add the -no-version option to the toplevel
  (Sébastien Hinderer)

### Debugging and profiling:

- GPR#585: Spacetime, a new memory profiler (Mark Shinwell, Leo White)

### Runtime system:

- PR#7203, GPR#534: Add a new primitive caml_alloc_float_array to allocate an
  array of floats
  (Thomas Braibant)


### Manual and documentation:

- PR#7243: warn users against using WinZip to unpack the source archive
  (Damien Doligez, report by Shayne Fletcher)

- PR#7245, GPR#565: clarification to the wording and documentation
  of Warning 52 (fragile constant pattern)
  (Gabriel Scherer, William, Adrien Nader, Jacques Garrigue)

- #PR7265, GPR#769: Restore 4.02.3 behaviour of Unix.fstat, if the
  file descriptor doesn't wrap a regular file (win32unix only)
  (Andreas Hauptmann, review by David Allsopp)

### Build system:

* GPR#512, GPR#587: Installed `ocamlc`, `ocamlopt`, and `ocamllex` are
  now the native-code versions of the tools, if those versions were
  built.
  (Demi Obenour)

- GPR#324: Compiler developers: Adding new primitives to the
  standard runtime doesn't require anymore to run `make bootstrap`
  (François Bobot)

- GPR#384: Fix compilation using old Microsoft C Compilers not
  supporting secure CRT functions (SDK Visual Studio 2005 compiler and
  earlier) and standard 64-bit integer literals (Visual Studio .NET
  2002 and earlier)
  (David Allsopp)

- GPR#507: More sharing between Unix and Windows makefiles
  (whitequark, review by Alain Frisch)

- GPR#687: "./configure -safe-string" to get a system where
  "-unsafe-string" is not allowed, thus giving stronger non-local