@@ -16,7 +16,7 @@
 &nbsp;</div>
 <h1>Module <a href="type_Inline_records.html">Inline_records</a></h1>
 
-<pre><span class="keyword">module</span> Inline_records: <code class="code">sig</code> <a href="Inline_records.html">..</a> <code class="code">end</code></pre><div class="info module top">
+<pre><span class="keyword">module</span> Inline_records: <code class="code"><span class="keyword">sig</span></code> <a href="Inline_records.html">..</a> <code class="code"><span class="keyword">end</span></code></pre><div class="info module top">
 This test focuses on the printing of documentation for inline record
   within the latex generator.<br>
 </div>
@@ -40,7 +40,7 @@ An open sum type<br>
 <td align="left" valign="top" >
 <code><span id="TYPEELTr.lbl">lbl</span>&nbsp;: <code class="type">int</code>;</code></td>
 <td class="typefieldcomment" align="left" valign="top" ><code>(*</code></td><td class="typefieldcomment" align="left" valign="top" ><div class="info ">
-Field documentation for non-inline, <code class="code">lbl : int</code><br>
+Field documentation for non-inline, <code class="code">lbl&nbsp;:&nbsp;int</code><br>
 </div>
 </td><td class="typefieldcomment" align="left" valign="bottom" ><code>*)</code></td>
 </tr>
@@ -50,7 +50,7 @@ Field documentation for non-inline, <code class="code">lbl : int</code><br>
 <td align="left" valign="top" >
 <code><span id="TYPEELTr.more">more</span>&nbsp;: <code class="type">int list</code>;</code></td>
 <td class="typefieldcomment" align="left" valign="top" ><code>(*</code></td><td class="typefieldcomment" align="left" valign="top" ><div class="info ">
-More documentation for r, <code class="code">more : int list</code><br>
+More documentation for r, <code class="code">more&nbsp;:&nbsp;int&nbsp;list</code><br>
 </div>
 </td><td class="typefieldcomment" align="left" valign="bottom" ><code>*)</code></td>
 </tr></table>
@@ -73,7 +73,7 @@ A simple record type for reference<br>
 <td align="left" valign="top" >
 <code><span id="TYPEELTInline_records.A.lbl">lbl</span>&nbsp;: <code class="type">int</code>;</code></td>
 <td class="typefieldcomment" align="left" valign="top" ><code>(*</code></td><td class="typefieldcomment" align="left" valign="top" ><div class="info ">
-<code class="code">A</code> field documentation<br>
+<code class="code"><span class="constructor">A</span></code> field documentation<br>
 </div>
 </td><td class="typefieldcomment" align="left" valign="bottom" ><code>*)</code></td>
 </tr>
@@ -83,7 +83,7 @@ A simple record type for reference<br>
 <td align="left" valign="top" >
 <code><span id="TYPEELTInline_records.A.more">more</span>&nbsp;: <code class="type">int list</code>;</code></td>
 <td class="typefieldcomment" align="left" valign="top" ><code>(*</code></td><td class="typefieldcomment" align="left" valign="top" ><div class="info ">
-More <code class="code">A</code> field documentation<br>
+More <code class="code"><span class="constructor">A</span></code> field documentation<br>
 </div>
 </td><td class="typefieldcomment" align="left" valign="bottom" ><code>*)</code></td>
 </tr></table>
@@ -112,7 +112,7 @@ A sum type with one inline record<br>
 <td align="left" valign="top" >
 <code><span id="TYPEELTInline_records.B.a_label_for_B">a_label_for_B</span>&nbsp;: <code class="type">int</code>;</code></td>
 <td class="typefieldcomment" align="left" valign="top" ><code>(*</code></td><td class="typefieldcomment" align="left" valign="top" ><div class="info ">
-<code class="code">B</code> field documentation<br>
+<code class="code"><span class="constructor">B</span></code> field documentation<br>
 </div>
 </td><td class="typefieldcomment" align="left" valign="bottom" ><code>*)</code></td>
 </tr>
@@ -122,7 +122,7 @@ A sum type with one inline record<br>
 <td align="left" valign="top" >
 <code><span id="TYPEELTInline_records.B.more_label_for_B">more_label_for_B</span>&nbsp;: <code class="type">int list</code>;</code></td>
 <td class="typefieldcomment" align="left" valign="top" ><code>(*</code></td><td class="typefieldcomment" align="left" valign="top" ><div class="info ">
-More <code class="code">B</code> field documentation<br>
+More <code class="code"><span class="constructor">B</span></code> field documentation<br>
 </div>
 </td><td class="typefieldcomment" align="left" valign="bottom" ><code>*)</code></td>
 </tr></table>
@@ -144,7 +144,7 @@ Constructor B documentation<br>
 <td align="left" valign="top" >
 <code><span id="TYPEELTInline_records.C.c_has_label_too">c_has_label_too</span>&nbsp;: <code class="type">float</code>;</code></td>
 <td class="typefieldcomment" align="left" valign="top" ><code>(*</code></td><td class="typefieldcomment" align="left" valign="top" ><div class="info ">
-<code class="code">C</code> field documentation<br>
+<code class="code"><span class="constructor">C</span></code> field documentation<br>
 </div>
 </td><td class="typefieldcomment" align="left" valign="bottom" ><code>*)</code></td>
 </tr>
@@ -183,7 +183,7 @@ A sum type with two inline records<br>
 <td align="left" valign="top" >
 <code><span id="TYPEELTInline_records.D.any">any</span>&nbsp;: <code class="type">'a</code>;</code></td>
 <td class="typefieldcomment" align="left" valign="top" ><code>(*</code></td><td class="typefieldcomment" align="left" valign="top" ><div class="info ">
-<code class="code">A</code> field <code class="code">any:'a</code> for <code class="code">D</code> in <code class="code">any</code>.<br>
+<code class="code"><span class="constructor">A</span></code> field <code class="code">any:<span class="keywordsign">'</span>a</code> for <code class="code"><span class="constructor">D</span></code> in <code class="code">any</code>.<br>
 </div>
 </td><td class="typefieldcomment" align="left" valign="bottom" ><code>*)</code></td>
 </tr></table>
@@ -225,7 +225,7 @@ Error field documentation <code class="code">name:string</code><br>
 <td align="left" valign="top" >
 <code><span id="TYPEELTInline_records.E.yet_another_field">yet_another_field</span>&nbsp;: <code class="type">unit</code>;</code></td>
 <td class="typefieldcomment" align="left" valign="top" ><code>(*</code></td><td class="typefieldcomment" align="left" valign="top" ><div class="info ">
-Field documentation for <code class="code">E</code> in ext<br>
+Field documentation for <code class="code"><span class="constructor">E</span></code> in ext<br>
 </div>
 </td><td class="typefieldcomment" align="left" valign="bottom" ><code>*)</code></td>
 </tr></table>
@@ -247,7 +247,7 @@ Constructor E documentation<br>
 <td align="left" valign="top" >
 <code><span id="TYPEELTInline_records.F.even_more">even_more</span>&nbsp;: <code class="type">int -> int</code>;</code></td>
 <td class="typefieldcomment" align="left" valign="top" ><code>(*</code></td><td class="typefieldcomment" align="left" valign="top" ><div class="info ">
-Some field documentations for <code class="code">F</code><br>
+Some field documentations for <code class="code"><span class="constructor">F</span></code><br>
 </div>
 </td><td class="typefieldcomment" align="left" valign="bottom" ><code>*)</code></td>
 </tr></table>
