@@ -174,6 +174,9 @@ OCaml 4.04.0:
 - MPR#7290: ocamldoc, improved support for inline records
   (Florian Angeletti)
 
+- PR#7272, GPR#798: ocamldoc, missing line breaks in type_*.html files
+  (Florian Angeletti)
+
 - Add the -no-version option to the toplevel
   (Sébastien Hinderer)
 
